<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_primary"
        android:elevation="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kuis1 Kalkulator"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|center_horizontal"
        android:orientation="vertical"
        android:padding="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="40dp"
            android:text="@string/title_kalkulator"
            android:textColor="@color/gray_text"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etAngka1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/gray_text"
            android:hint="@string/hint_angka1"
            android:importantForAutofill="no"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/etAngka2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/gray_text"
            android:hint="@string/hint_angka2"
            android:importantForAutofill="no"
            android:inputType="numberDecimal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnTambah"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray_button"
                android:text="@string/op_tambah"
                android:textColor="@color/black"
                app:cornerRadius="0dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnKurang"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray_button"
                android:text="@string/op_kurang"
                android:textColor="@color/black"
                app:cornerRadius="0dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnKali"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray_button"
                android:text="@string/op_kali"
                android:textColor="@color/black"
                app:cornerRadius="0dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnBagi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray_button"
                android:text="@string/op_bagi"
                android:textColor="@color/black"
                app:cornerRadius="0dp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvHasil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hasil: 0"
            android:textColor="@color/gray_text"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
